# simple-amari.py

./: CONTRIBUTING.md  README.md  _config.yml  changelog.md  index.md  pyproject.toml  requirements.txt  setup.cfg
.github/: FUNDING.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml
.github/workflows/: codeql-analysis.yml  greetings.yml
_posts/: 2022-02-06-welcome.md  2022-02-06-welcome.yaml
amari/: __init__.py  api.py  exceptions.py  objects.py
docs/: quickstart.md  quickstart.yml
docs/errors/: errors.md
getting-started/: getting-access.md  getting-started.md  getting-started.yaml  installation.md
tests/: test_package.py
