[metadata]
name = simple-amari.py
version = attr: amari.__version__ 
url = https://github.com/InvalidLenni/simple-amari.py
author = InvalidLenni
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
license = MIT
license_file = LICENSE
description = A simple easy2use Python wrapper for the AmariBot API.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
project_urls =
    Documentation = https://simple-amaripy.readthedocs.io/en/latest/

[options]
packages = amari,
install_requires =
    aiohttp>=3.6.0,<3.8.0
    
python_requires = >=3.8
